Wed Sep 21 20:54:37 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: run program from idle to avoid a queued up
	  program if double hitting run

Wed Sep 21 20:44:39 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/*.gel: update the complex analysis examples to have
	  saner limits, make the mandelbrot set have roughly the right
	  aspect.

Wed Sep 21 18:55:34 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add LinePlotWaitForClick and LinePlotMouseLocation
	  for interactive programs

	* help/C/genius.xml: document the above

	* examples/: Make wandering ball interactive and add two Mandelbrot
	  set examples, plus a Newton's fractal example

Wed Sep 07 14:45:53 2016  Jiri (George) Lebl <jirka@5z.com>

	* ve/ve-misc.c: ignore a warning in ve_strftime

Wed Sep 21 18:47:47 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c: simplify abs_sq for real numbers

Wed Aug 24 17:58:18 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/complex-analysis-mesh.gel,
	  examples/complex-analysis-wandering-ball.gel: two visualizations of
	  complex mappings
	
	* src/graphing.c: LinePlotDrawPoints and LinePlotDrawLine now accept
	  a column vector of complex numbers to draw.

	* help/C/genius.xml: document the above.

Sat Jul 09 00:14:53 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, src/funclib.c,
	  lib/linear_algebra/linear_algebra.gel: string fixes from
	  Anders Jonsson.

	* src/eval.c: fix segfault when trying to swap a protected id using
	  swapwith.

Fri Jul 08 23:52:05 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: Apply patch from Anders Jonsson to fix quite a
	  few typos in the manual.

Fri Jul 08 23:46:02 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix StripZeroColumns when a zero matrix is passed
	  in.

	* help/C/genius.xml: fix Planetmath links (thanks to Anders Jonsson).
	  Also add a couple more wikipedia links and a couple of details in
	  various places.
