@@ -9,8 +9,8 @@
 # The Lorenz system (try playing around with the constants,
 # especially the 28)
 function lorenz(t,x) = [10*(x@(2)-x@(1)),
-					  x@(1)*(28-x@(3))-x@(2),
-					  x@(1)*x@(2)-(8/3)*x@(3)];
+                        x@(1)*(28-x@(3))-x@(2),
+                        x@(1)*x@(2)-(8/3)*x@(3)];
 
 # The [1,1,20] is an initial condition, try playing around with it,
 # the 15 is the time to follow a trajectory, 10000 is the number of
