@@ -17,10 +17,12 @@ LinePlotDrawLine(c1,-100,c1,100,"color","red","thickness",1);
 
 AskButtons("We're starting with an estimate at x=2","OK");
 
-LinePlot(f,`(x)=df(c1)*(x-c1)+f(c1));
+LinePlot(f,
+         `(x)=df(c1)*(x-c1)+f(c1));
 c2=c1-f(c1)/df(c1);
 LinePlotDrawLine(c1,-100,c1,100,"color","black","thickness",1);
 LinePlotDrawLine(c2,-100,c2,100,"color","red","thickness",1);
+PlotWindowPresent(); # Make sure the window is raised
 AskButtons(float(c2)+" (real sqrt(2) is " + sqrt(2) + ")","OK");
 
 LinePlot(f,
@@ -29,6 +31,7 @@ c3=c2-f(c2)/df(c2);
 LinePlotDrawLine(c1,-100,c1,100,"color","black","thickness",1);
 LinePlotDrawLine(c2,-100,c2,100,"color","black","thickness",1);
 LinePlotDrawLine(c3,-100,c3,100,"color","red","thickness",1);
+PlotWindowPresent(); # Make sure the window is raised
 AskButtons(float(c3)+" (real sqrt(2) is " + sqrt(2) + ")","OK");
 
 LinePlot(f,
@@ -38,4 +41,5 @@ LinePlotDrawLine(c1,-100,c1,100,"color","black","thickness",1);
 LinePlotDrawLine(c2,-100,c2,100,"color","black","thickness",1);
 LinePlotDrawLine(c3,-100,c3,100,"color","black","thickness",1);
 LinePlotDrawLine(c4,-100,c4,100,"color","red","thickness",1);
+PlotWindowPresent(); # Make sure the window is raised
 AskButtons(float(c4)+" (real sqrt(2) is " + sqrt(2) + ")","OK");
