@@ -1,3 +1,13 @@
+Wed Sep 21 23:47:46 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, src/examples.[ch]: split up examples into
+	  submenus by category
+
+	* src/gnome-genius.c: fix warnings
+
+	* examples/*.gel: fix some usage of undocumented syntax for
+	  LinePlotLineDraw
+
 Wed Sep 21 20:54:37 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: run program from idle to avoid a queued up
